--- a/package.json
+++ b/package.json
@@ -23,23 +23,23 @@
     "@ionic-native/core": "5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
-    "@ionic/angular": "4.0.0-beta.19",
+    "@ionic/angular": "4.0.0-rc.0",
     "core-js": "^2.6.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.11.3",
-    "@angular-devkit/build-angular": "~0.11.3",
-    "@angular-devkit/core": "~7.1.3",
-    "@angular-devkit/schematics": "~7.1.3",
-    "@angular/cli": "~7.1.3",
+    "@angular-devkit/architect": "~0.11.4",
+    "@angular-devkit/build-angular": "~0.11.4",
+    "@angular-devkit/core": "~7.1.4",
+    "@angular-devkit/schematics": "~7.1.4",
+    "@angular/cli": "~7.1.4",
     "@angular/compiler": "~7.1.4",
     "@angular/compiler-cli": "~7.1.4",
     "@angular/language-service": "~7.1.4",
-    "@ionic/angular-toolkit": "~1.2.0",
-    "@types/node": "~10.12.17",
-    "@types/jasmine": "~3.3.4",
+    "@ionic/angular-toolkit": "~1.2.2",
+    "@types/node": "~10.12.18",
+    "@types/jasmine": "~3.3.5",
     "@types/jasminewd2": "~2.0.6",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
