--- a/package.json
+++ b/package.json
@@ -20,31 +20,31 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@ionic-native/core": "5.0.0-beta.21",
-    "@ionic-native/splash-screen": "5.0.0-beta.21",
-    "@ionic-native/status-bar": "5.0.0-beta.21",
-    "@ionic/angular": "4.0.0-rc.3",
+    "@ionic-native/core": "5.0.0",
+    "@ionic-native/splash-screen": "5.0.0",
+    "@ionic-native/status-bar": "5.0.0",
+    "@ionic/angular": "4.0.0",
     "core-js": "^2.6.1",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.4.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.12.1",
-    "@angular-devkit/build-angular": "~0.12.1",
-    "@angular-devkit/core": "~7.2.1",
-    "@angular-devkit/schematics": "~7.2.1",
-    "@angular/cli": "~7.2.1",
+    "@angular-devkit/architect": "~0.13.0",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/core": "~7.3.0",
+    "@angular-devkit/schematics": "~7.3.0",
+    "@angular/cli": "~7.3.0",
     "@angular/compiler": "~7.2.0",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@ionic/angular-toolkit": "~1.2.2",
+    "@ionic/angular-toolkit": "~1.3.0",
     "@types/node": "~10.12.18",
     "@types/jasmine": "~3.3.5",
     "@types/jasminewd2": "~2.0.6",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
+    "karma": "~4.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.4",
     "karma-jasmine": "~2.0.1",
@@ -52,7 +52,7 @@
     "protractor": "~5.4.1",
     "ts-node": "~8.0.1",
     "tslint": "~5.12.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.4"
   },
   "description": "An Ionic project"
 }
