--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic/angular": "4.0.0",
     "core-js": "^2.6.1",
     "rxjs": "~6.4.0",
+    "terser": "^3.14.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
