--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@ionic-native/core": "5.0.0",
-    "@ionic-native/splash-screen": "5.0.0",
-    "@ionic-native/status-bar": "5.0.0",
-    "@ionic/angular": "4.0.1",
+    "@ionic-native/core": "5.2.0",
+    "@ionic-native/splash-screen": "5.2.0",
+    "@ionic-native/status-bar": "5.2.0",
+    "@ionic/angular": "4.0.2",
     "core-js": "^2.6.1",
     "rxjs": "~6.4.0",
     "terser": "^3.14.1",
@@ -36,12 +36,12 @@
     "@angular-devkit/schematics": "~7.3.0",
     "@angular/cli": "~7.3.0",
     "@angular/compiler": "~7.2.0",
-    "@angular/compiler-cli": "~7.2.0",
+    "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "~7.2.0",
-    "@ionic/angular-toolkit": "~1.3.0",
-    "@types/node": "~11.9.3",
+    "@ionic/angular-toolkit": "~1.4.0",
     "@types/jasmine": "~3.3.5",
     "@types/jasminewd2": "~2.0.6",
+    "@types/node": "~11.9.3",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -55,5 +55,5 @@
     "tslint": "~5.12.0",
     "typescript": "~3.2.4"
   },
-  "description": "An Ionic project"
+  "description": "口红管家"
 }
